W01: Course Home Page

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   <body>
     <header>
       <img src="images/profile.jpg" alt="christopher" />
-      <span>Christopher</span>
+      <span>Christopher G. Dallar</span>
     </header>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Chamber</a></li>
-        <li><a href="#">Site Plan</a></li>
-        <li><a href="#">Form</a></li>
+        <a href="index.html" class="active"><li>Home</li></a>
+        <a href="#"><li>Chamber</li></a>
+        <a href="#"><li>Site Plan</li></a>
+        <a href="#"><li>Form</li></a>
       </ul>
     </nav>
     <main>
@@ -37,18 +37,35 @@
       <section class="card">
         <h2>Learning Activities</h2>
         <ul>
-          <li><a href=""></a></li>
+          <li>
+            Week 01:
+            <a href="#">Layout</a>
+            |
+            <a href="#">Media Query</a>
+            |
+            <a href="#">Js Pen</a>
+          </li>
+          <li>Week 02:</li>
+          <li>Week 03:</li>
+          <li>Week 04:</li>
+          <li>Week 05:</li>
+          <li>Week 06:</li>
         </ul>
       </section>
 
       <section class="card">
         <h2>Information</h2>
+        <ul>
+          <li>🇻🇪 Caracas, Venezuela:</li>
+          <li>☔ 23°C - Sunshine</li>
+          <li>🚀 Page Visits: 15</li>
+        </ul>
       </section>
     </main>
 
     <footer>
       <p>
-        &copy; 2024, Christopher, Venezuela.
+        &copy; 2024, Christopher Gómez Dallar, Venezuela.
       </p>
       <p id="lastModified"></p>
     </footer>
