--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -11,7 +11,10 @@
   </head>
   <body>
     <header>
-      <h1>Barquisimeto Chamber of Commerce Site Plan</h1>
+      <h1>
+        <span class="primary-color">Barquisimeto Chamber of Commerce</span>
+        Site Plan
+      </h1>
       <h2>Christopher Gómez</h2>
       <h2>WDD 230</h2>
     </header>
@@ -20,32 +23,31 @@
       <h2>Overview</h2>
       <h3>Site Name</h3>
       <p>
-        The name of the site is
-        <strong>Barquisimeto Chamber of Commerce</strong>
-        , because i want to create a website about a locate that is familiar for
-        me.
+        <i>
+          "
+          <strong class="primary-color">
+            Barquisimeto Chamber of Commerce
+          </strong>
+          "
+        </i>
       </p>
 
       <h3>Site Purpose</h3>
-      <p>
-        To share with as many people as possible information about the best
-        Businesses to visit in Barquisimeto city, tips and show how wonderful
-        and exciting it can be buy and sell in the city. Also, to provide a
-        digital place to publish recent and new events and a contact list of
-        every member of the chamber ecommerce to encourage people to try buy the
-        things that they need in the company afiliated in this chamber
-        ecommmerce or to be part of this chamber using the page to sent it's
-        request to join.
-      </p>
-
-      <!-- <h3>Audience</h3>
-      <p>
-        The target customers are parents with a good economic situation over 27
-        years old, interested in extreme sports who want to give an
-        unforgettable experience to their families. Also, people between 19
-        years old who like extreme sports or want to try a new experience. Both
-        are usually accessed by desktop or laptop.
-      </p> -->
+      <ul>
+        <li>
+          Share with as many people as possible information about the best
+          Businesses to visit in the city of Barquisimeto.
+        </li>
+        <li>
+          Provide a digital place to post new and recent events and a contact
+          list of each member of the chamber of commerce.
+        </li>
+        <li>
+          Encourage people to try to buy what they need from the company
+          affiliated with this commerce chamber or be part of this camera using
+          the page to submit your entry application.
+        </li>
+      </ul>
 
       <h3>Scenarios</h3>
       <ul>
@@ -76,10 +78,10 @@
 
       <p>Palette URL:</p>
       <a
-        href="https://coolors.co/e7ecef-274c77-6096ba-a3cef1-8b8c89"
+        href="https://coolors.co/f7b32b-fdfdff-d00000-62929e-444554"
         target="_blank"
       >
-        https://coolors.co/e7ecef-274c77-6096ba-a3cef1-8b8c89
+        https://coolors.co/f7b32b-fdfdff-d00000-62929e-444554
       </a>
 
       <table class="colors">
@@ -108,17 +110,17 @@
       </h4>
       <h3>Normal paragraph example</h3>
       <p>
-        The best Whitewater Rafting in Colorado, White Water Rafting Company
-        offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
-        Springs. Since 1974, we have been family owned and operated, rafting the
-        Shoshone section of Glenwood Canyon and beyond.
+        Welcome to Barquisimeto Chamber of Commerce a digital space where
+        information flows, connections thrive, and opportunities await. Our
+        mission is clear: empower locals and visitors alike by providing
+        essential resources and fostering community engagement.
       </p>
       <h3>Colored paragraph example</h3>
       <p class="colored">
-        Trips vary from mild and great for families, to trips exclusively for
-        physically fit and experienced rafters. No matter what type of river
-        adventures you are seeking, White Water Rafting Company can make it
-        happen for you.
+        Welcome to Barquisimeto Chamber of Commerce a digital space where
+        information flows, connections thrive, and opportunities await. Our
+        mission is clear: empower locals and visitors alike by providing
+        essential resources and fostering community engagement.
       </p>
 
       <h3>Navigation</h3>
@@ -131,29 +133,14 @@
       <hr />
       <h2>Site Map</h2>
       <div class="sitemap">
-        <div class="sm-home">Home</div>
-        <div class="sm-page2">
-          FAQ
-        </div>
-        <div class="sm-page3">Contact Us</div>
-
-        <div class="top">&nbsp;</div>
-        <div class="left">&nbsp;</div>
-        <div class="right">&nbsp;</div>
+        <img src="images/site_map.svg" alt="site_map" />
       </div>
       <hr />
       <h2>Wireframes</h2>
 
       <h3>Home</h3>
 
-      <img
-        src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png"
-        alt="home page wireframe"
-      />
-
-      <h3>FAQ</h3>
-
-      <img src="images/wireframe.png" alt="FAQ wireframe" />
+      <img src="images/wireframe_home.png" alt="home page wireframe" />
     </main>
   </body>
 </html>
