W01: Project Milestone - The Chamber of Commerce Site Plan

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <ul>
         <a href="index.html" class="active"><li>Home</li></a>
         <a href="#"><li>Chamber</li></a>
-        <a href="#"><li>Site Plan</li></a>
+        <a href="week01/chamber-site-plan.html"><li>Site Plan</li></a>
         <a href="#"><li>Form</li></a>
       </ul>
     </nav>
