W01: Project Milestone - The Chamber of Commerce Site Plan

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Site Plan</title>
     <link
       type="text/css"
       rel="stylesheet"
       href="styles/chamber-site-plan.css"
-    />
+    >
   </head>
   <body>
     <header>
@@ -19,7 +19,7 @@
       <h2>WDD 230</h2>
     </header>
     <main>
-      <hr />
+      <hr>
       <h2>Overview</h2>
       <h3>Site Name</h3>
       <p>
@@ -67,11 +67,11 @@
         </li>
       </ul>
 
-      <hr />
+      <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
-      <img src="images/logo.png" alt="Logo image" />
-      <hr />
+      <img src="images/logo.png" alt="Logo image">
+      <hr>
       <h2>Style Guide</h2>
 
       <h3>Color Palette</h3>
@@ -130,17 +130,17 @@
         <a href="#">Directory</a>
         <a href="#">Join</a>
       </nav>
-      <hr />
+      <hr>
       <h2>Site Map</h2>
       <div class="sitemap">
-        <img src="images/site_map.svg" alt="site_map" />
+        <img src="images/site_map.svg" alt="site_map" >
       </div>
-      <hr />
+      <hr>
       <h2>Wireframes</h2>
 
       <h3>Home</h3>
 
-      <img src="images/wireframe_home.png" alt="home page wireframe" />
+      <img src="images/wireframe_home.png" alt="home page wireframe">
     </main>
   </body>
 </html>
