W01: Project Milestone - The Chamber of Commerce Site Plan

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -2,18 +2,22 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <title>Site Plan</title>
+    <title>Barquisimeto Chamber of Commerce Site Plan</title>
     <link
       type="text/css"
       rel="stylesheet"
       href="styles/chamber-site-plan.css"
     >
+    <meta
+    name="description"
+    content="WDD 230 - Barquisimeto Chamber of Commerce Site Plan, Christopher Gómez Dallar"
+    >
+    <meta name="author" content="Christopher Gómez Dallar">
   </head>
   <body>
     <header>
       <h1>
-        <span class="primary-color">Barquisimeto Chamber of Commerce</span>
-        Site Plan
+        Barquisimeto Chamber of Commerce Site Plan
       </h1>
       <h2>Christopher Gómez</h2>
       <h2>WDD 230</h2>
@@ -74,9 +78,9 @@
       <hr>
       <h2>Style Guide</h2>
 
-      <h3>Color Palette</h3>
+      <h3>Color Schema</h3>
 
-      <p>Palette URL:</p>
+      <p>Color Schema URL:</p>
       <a
         href="https://coolors.co/f7b32b-fdfdff-d00000-62929e-444554"
         target="_blank"
