--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
             |
             <a href="#">Js Pen</a>
           </li>
-          <li>Week 02:</li>
+          <li>
+            Week 02:
+            <a href="week02/design.html">Web Design Principles</a>
+          </li>
           <li>Week 03:</li>
           <li>Week 04:</li>
           <li>Week 05:</li>
