--- a/week02/design.html
+++ b/week02/design.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <header>
-      <marquee behavior="alternate" direction="right">
+      <div class="banner">
         🪲 The Lazy Bug
         <br />
         Join us for the ribbon cutting cermony!
         <br />
         Friday at 11:00 AM!
-      </marquee>
+      </div>
       <h1>Design Principles</h1>
     </header>
     <main>
