--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       content="WDD 230 - Web Frontend Development, Christopher Gómez Dallar, course assignment portal"
     />
     <meta name="author" content="" />
+    <link rel="icon" href="favicon.ico" />
   </head>
   <body>
     <header>
