--- a/week02/design.html
+++ b/week02/design.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Design Principles</title>
     <link rel="stylesheet" href="styles/design.css" />
+    <link rel="icon" href="../favicon.ico" />
   </head>
   <body>
     <header>
