Social Media Meta Tags

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
     />
     <meta name="author" content="" />
     <link rel="icon" href="favicon.ico" />
+    <link href="https://christopherdallar.github.io/wdd230/" rel="canonical" />
+    <meta
+      property="og:title"
+      content="Christopher - WDD 230 - Web Frontend Development"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://christopherdallar.github.io/wdd230/"
+    />
+    <meta
+      property="og:image"
+      content="https://christopherdallar.github.io/wdd230/images/home_page.png"
+    />
   </head>
   <body>
     <header>
