Responsive "Hamburger" Menu

--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
           <li>
             Week 02:
             <a href="week02/design.html">Web Design Principles</a>
+            |
+            <a
+              target="_blank"
+              href="https://codepen.io/christopherDallar/pen/vYwEjgy"
+            >
+              Ham Menu Pen
+            </a>
           </li>
           <li>Week 03:</li>
           <li>Week 04:</li>
