--- a/index.html
+++ b/index.html
@@ -1,67 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
-    <link rel="stylesheet" href="styles/normalize.css" >
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="styles/normalize.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
-    >
-    <link rel="stylesheet" href="styles/base.css" >
-    <link rel="stylesheet" href="styles/larger.css" >
+  >
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
     <title>Christopher - WDD 230 - Web Frontend Development</title>
     <meta
       name="description"
       content="WDD 230 - Web Frontend Development, Christopher Gómez Dallar, course assignment portal"
-    >
-    <meta name="author" content="" >
-    <link rel="icon" href="favicon.ico" >
-    <link href="https://christopherdallar.github.io/wdd230/" rel="canonical" >
+  >
+    <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
+    <link href="https://christopherdallar.github.io/wdd230/" rel="canonical">
     <meta
       property="og:title"
       content="Christopher - WDD 230 - Web Frontend Development"
-    >
-    <meta property="og:type" content="website" >
+  >
+    <meta property="og:type" content="website">
     <meta
       property="og:url"
       content="https://christopherdallar.github.io/wdd230/"
-    >
+  >
     <meta
       property="og:image"
       content="https://christopherdallar.github.io/wdd230/images/home_page.png"
-    >
+  >
   </head>
   <body>
     <header>
-      <img src="images/profile.jpg" alt="christopher" >
+      <img src="images/profile.jpg" alt="christopher">
       <span>Christopher G. Dallar</span>
     </header>
     <nav>
-      <ul>
-        <a href="index.html" class="active"><li>Home</li></a>
-        <a href="#"><li>Chamber</li></a>
-        <a href="week01/chamber-site-plan.html"><li>Site Plan</li></a>
-        <a href="#"><li>Form</li></a>
-      </ul>
+      <a href="index.html" class="active"><li>Home</li></a>
+      <a href="#"><li>Chamber</li></a>
+      <a href="week01/chamber-site-plan.html"><li>Site Plan</li></a>
+      <a href="#"><li>Form</li></a>
     </nav>
     <main>
       <h1>WDD 230: Web Frontend Development</h1>
 
       <section class="card">
         <h2>Learning Activities</h2>
-        <ul>
-          <li>
+        <div class="list-link">
+          <div>
             Week 01:
             <a href="#">Layout</a>
             |
             <a href="#">Media Query</a>
             |
             <a href="#">Js Pen</a>
-          </li>
-          <li>
+          </div>
+          <div>
             Week 02:
             <a href="week02/design.html">Web Design Principles</a>
             |
@@ -75,12 +73,12 @@
             <a href="week02/bom.html">
               DOM Manipulation
             </a>
-          </li>
-          <li>Week 03:</li>
-          <li>Week 04:</li>
-          <li>Week 05:</li>
-          <li>Week 06:</li>
-        </ul>
+          </div>
+          <div>Week 03:</div>
+          <div>Week 04:</div>
+          <div>Week 05:</div>
+          <div>Week 06:</div>
+        </div>
       </section>
 
       <section class="card">
