--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       <span>Christopher G. Dallar</span>
     </header>
     <nav>
-      <a href="index.html" class="active"><li>Home</li></a>
-      <a href="#"><li>Chamber</li></a>
-      <a href="week01/chamber-site-plan.html"><li>Site Plan</li></a>
-      <a href="#"><li>Form</li></a>
+      <a href="index.html" class="active">Home</a>
+      <a href="#">Chamber</a>
+      <a href="week01/chamber-site-plan.html">Site Plan</a>
+      <a href="#">Form</a>
     </nav>
     <main>
       <h1>WDD 230: Web Frontend Development</h1>
