--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     <header>
       <img src="images/profile.jpg" alt="christopher">
       <span>Christopher G. Dallar</span>
+      <div id="mode">
+        🕶️
+      </div>
     </header>
     <nav>
       <a href="index.html" class="active">Home</a>
@@ -99,5 +102,6 @@
     </footer>
 
     <script src="scripts/getDates.js"></script>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
