--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Document</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" >
+    <meta name="author" content="Christopher Gomez Dallar wdd230" >
     <meta
       name="description"
       content="Barquisimeto Chamber of Commerce Site Plan is a website to promote business and share with as many people as possible news and recent events and a contact list of each member of the chamber of commerce."
