--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>Document</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" >
+    <title>Barquisimeto Chamber of Commerce</title>
+    <link rel="icon" href="favicon.ico">
     <meta name="author" content="Christopher Gomez Dallar wdd230" >
     <meta
       name="description"
       content="Barquisimeto Chamber of Commerce Site Plan is a website to promote business and share with as many people as possible news and recent events and a contact list of each member of the chamber of commerce."
     >
     <link href="https://christopherdallar.github.io/wdd230/" rel="canonical" >
+    <meta property="og:type" content="website">
     <meta
       property="og:title"
       content="Christopher - WDD 230 - Web Frontend Development"
