W02: Project - The Chamber of Commerce Home Page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barquisimeto Chamber of Commerce</title>
-    <link rel="icon" href="favicon.ico">
-    <meta name="author" content="Christopher Gomez Dallar wdd230" >
+    <link rel="icon" href="favicon.ico" />
+    <meta name="author" content="Christopher Gomez Dallar wdd230" />
     <meta
       name="description"
       content="Barquisimeto Chamber of Commerce Site Plan is a website to promote business and share with as many people as possible news and recent events and a contact list of each member of the chamber of commerce."
-    >
-    <link href="https://christopherdallar.github.io/wdd230/" rel="canonical" >
-    <meta property="og:type" content="website">
+    />
+    <link href="https://christopherdallar.github.io/wdd230/" rel="canonical" />
+    <meta property="og:type" content="website" />
     <meta
       property="og:title"
       content="Christopher - WDD 230 - Web Frontend Development"
-    >
-    <meta property="og:type" content="website" >
+    />
+    <meta property="og:type" content="website" />
     <meta
       property="og:url"
       content="https://christopherdallar.github.io/wdd230/chamber/"
-    >
+    />
     <meta
       property="og:image"
       content="https://christopherdallar.github.io/wdd230/chamber/images/home_page.png"
-    >
-    <link rel="stylesheet" href="styles/normalize.css" >
-    <link rel="stylesheet" href="styles/base.css" >
-    <link rel="stylesheet" href="styles/larger.css" >
+    />
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/larger.css" />
   </head>
   <body>
     <header>
@@ -42,10 +42,11 @@
 
     <main>
       <div class="hero-image">
-        <img src="images/hero.webp" alt="chamber of commerce" >
+        <img src="images/hero.webp" alt="chamber of commerce" />
         <a href="#" class="call-to-action">Join</a>
       </div>
 
+      <h1>Barquisimeto Chamber of Commerce</h1>
       <section class="current-events">
         <h3>Event x</h3>
         <p>lorem sit amet</p>
