--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
     <nav>
       <a href="index.html" class="active">Home</a>
-      <a href="#">Chamber</a>
+      <a href="chamber/index.html">Chamber</a>
       <a href="week01/chamber-site-plan.html">Site Plan</a>
       <a href="#">Form</a>
     </nav>
