WDD 230: Web Frontend Development I

--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
               DOM Manipulation
             </a>
           </div>
-          <div>Week 03:</div>
+          <div>
+            Week 03:
+            <a href="week03/images/landscape.webp">WebP</a>
+
+          </div>
           <div>Week 04:</div>
           <div>Week 05:</div>
           <div>Week 06:</div>
