--- a/week03/lazyload.html
+++ b/week03/lazyload.html
@@ -12,32 +12,32 @@
     </header>
     <main>
       <img
-        src="https://via.placeholder.com/400x600/"
+        src="https://picsum.photos/400/600"
         alt="Image Placeholder"
         loading="lazy"
       >
       <img
-        src="https://via.placeholder.com/400x600/"
+        src="https://picsum.photos/400/600"
         alt="Image Placeholder"
         loading="lazy"
       >
       <img
-        src="https://via.placeholder.com/400x600/"
+        src="https://picsum.photos/400/600"
         alt="Image Placeholder"
         loading="lazy"
       >
       <img
-        src="https://via.placeholder.com/400x600/"
+        src="https://picsum.photos/400/600"
         alt="Image Placeholder"
         loading="lazy"
       >
       <img
-        src="https://via.placeholder.com/400x600/"
+        src="https://picsum.photos/400/600"
         alt="Image Placeholder"
         loading="lazy"
       >
       <img
-        src="https://via.placeholder.com/400x600/"
+        src="https://picsum.photos/400/600"
         alt="Image Placeholder"
         loading="lazy"
       >
