--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
           <div>
             Week 03:
             <a href="week03/images/landscape.webp">WebP</a>
+            |
+            <a href="week03/lazyload.html">lazyload</a>
 
           </div>
           <div>Week 04:</div>
