--- a/week03/lazyload.html
+++ b/week03/lazyload.html
@@ -12,34 +12,68 @@
     </header>
     <main>
       <img
-        src="https://picsum.photos/400/600"
+        src="https://picsum.photos/id/1/400/600"
         alt="Image Placeholder"
         loading="lazy"
+        width="400"
+        height="600"
+      >
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere libero
+        sunt explicabo qui quod sint. Debitis cumque impedit, dicta perspiciatis
+        ipsam qui deserunt, corrupti praesentium distinctio quidem commodi eius
+        eaque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+        libero sunt explicabo qui quod sint. Debitis cumque impedit, dicta
+        perspiciatis ipsam qui deserunt, corrupti praesentium distinctio quidem
+        commodi eius eaque! Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Facere libero sunt explicabo qui quod sint. Debitis cumque
+        impedit, dicta perspiciatis ipsam qui deserunt, corrupti praesentium
+        distinctio quidem commodi eius eaque! Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Facere libero sunt explicabo qui quod
+        sint. Debitis cumque impedit, dicta perspiciatis ipsam qui deserunt,
+        corrupti praesentium distinctio quidem commodi eius eaque! Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Facere libero sunt
+        explicabo qui quod sint. Debitis cumque impedit, dicta perspiciatis
+        ipsam qui deserunt, corrupti praesentium distinctio quidem commodi eius
+        eaque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+        libero sunt explicabo qui quod sint. Debitis cumque impedit, dicta
+        perspiciatis ipsam qui deserunt, corrupti praesentium distinctio quidem
+        commodi eius eaque!
+      </p>
+      <img
+        src="https://picsum.photos/id/2/400/600"
+        alt="Image Placeholder"
+        loading="lazy"
+        width="400"
+        height="600"
       >
       <img
-        src="https://picsum.photos/400/600"
+        src="https://picsum.photos/id/3/400/600"
         alt="Image Placeholder"
         loading="lazy"
+        width="400"
+        height="600"
       >
       <img
-        src="https://picsum.photos/400/600"
+        src="https://picsum.photos/id/4/400/600"
         alt="Image Placeholder"
         loading="lazy"
+        width="400"
+        height="600"
       >
       <img
-        src="https://picsum.photos/400/600"
+        src="https://picsum.photos/id/5/400/600"
         alt="Image Placeholder"
         loading="lazy"
+        width="400"
+        height="600"
       >
       <img
-        src="https://picsum.photos/400/600"
+        src="https://picsum.photos/id/6/400/600"
         alt="Image Placeholder"
         loading="lazy"
-      >
-      <img
-        src="https://picsum.photos/400/600"
-        alt="Image Placeholder"
-        loading="lazy"
+        width="400"
+        height="600"
       >
     </main>
     <footer>
