--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
             <a href="week03/images/landscape.webp">WebP</a>
             |
             <a href="week03/lazyload.html">lazyload</a>
+            |
+            <a href="week03/responsive-images.html">Responsive Images</a>
 
           </div>
           <div>Week 04:</div>
