Web Storage API - localStorage

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
             <a href="week03/lazyload.html">lazyload</a>
             |
             <a href="week03/responsive-images.html">Responsive Images</a>
+            |
+            <a href="week03/bom.html">localStorage</a>
 
           </div>
           <div>Week 04:</div>
