W03: Team Activity - Home Page Responsive Images

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
       <div id="mode">
         🕶️
       </div>
+      <button id="menu"></button>
     </header>
-    <nav>
+    <nav class="navigation">
       <a href="index.html" class="active">Home</a>
       <a href="chamber/index.html">Chamber</a>
       <a href="week01/chamber-site-plan.html">Site Plan</a>
