--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,10 +31,11 @@
   </head>
   <body>
     <header>
+      <img src="images/logo.png" alt="" >
       <button id="menu"></button>
       <nav class="navigation">
-        <a href="chamber" class="active">Home</a>
-        <a href="#">Discover</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="discover.html">Discover</a>
         <a href="#">Directory</a>
         <a href="#">Join</a>
       </nav>
