W03: Project Milestone - The Chamber Discover Page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>Barquisimeto Chamber of Commerce</title>
+    <title>Barquisimeto Chamber of Commerce - Discover</title>
     <link rel="icon" href="favicon.ico" >
     <meta name="author" content="Christopher Gomez Dallar wdd230" >
     <meta
@@ -78,7 +78,7 @@
       </aside>
 
       <div class="gallery-images">
-        <h1>Discover</h1>
+        <h1>Discover New Events or Information</h1>
         <picture>
           <source
             media="(max-width: 500px)"
