W03: Project Milestone - The Chamber Discover Page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -78,7 +78,7 @@
       </aside>
 
       <div class="gallery-images">
-        <h1>Discover New Events or Information</h1>
+        <h1>Discover</h1>
         <picture>
           <source
             media="(max-width: 500px)"
