--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
             |
             <a href="week03/bom.html">localStorage</a>
           </div>
-          <div>Week 04:</div>
+          <div>Week 04:
+            <a href="https://codepen.io/christopherDallar/pen/eYaZmVV">PEN</a>
+            
+          </div>
           <div>Week 05:</div>
           <div>Week 06:</div>
         </div>
