--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
           </div>
           <div>Week 04:
             <a href="https://codepen.io/christopherDallar/pen/eYaZmVV">PEN</a>
-            
+            |
+            <a href="week04/images/combinator-exercise.png">Combinator Exercise</a>
           </div>
           <div>Week 05:</div>
           <div>Week 06:</div>
