HTML Tables for Data Presentation

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
             <a href="https://codepen.io/christopherDallar/pen/eYaZmVV">PEN</a>
             |
             <a href="week04/images/combinator-exercise.png">Combinator Exercise</a>
+            |
+            <a href="week04/tablebuild.html">Tables</a>
           </div>
           <div>Week 05:</div>
           <div>Week 06:</div>
