--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
             <a href="week04/images/combinator-exercise.png">Combinator Exercise</a>
             |
             <a href="week04/tablebuild.html">Tables</a>
+            |
+            <a href="week04/form-start/index.html">Form</a>
           </div>
           <div>Week 05:</div>
           <div>Week 06:</div>
