--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <link rel="preconnect" href="https://fonts.googleapis.com" >
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
@@ -47,9 +47,9 @@
       <a href="index.html" class="active">Home</a>
       <a href="chamber/index.html">Chamber</a>
       <a href="week01/chamber-site-plan.html">Site Plan</a>
-      <a href="#">Form</a>
+      <a href="form.html">Form</a>
     </nav>
-    <main>
+    <main class="home">
       <div class="hero">
         <picture>
           <source media="(max-width: 500px)" srcset="images/hero-small.webp" >
@@ -105,10 +105,13 @@
             |
             <a href="week03/bom.html">localStorage</a>
           </div>
-          <div>Week 04:
+          <div>
+            Week 04:
             <a href="https://codepen.io/christopherDallar/pen/eYaZmVV">PEN</a>
             |
-            <a href="week04/images/combinator-exercise.png">Combinator Exercise</a>
+            <a href="week04/images/combinator-exercise.png">
+              Combinator Exercise
+            </a>
             |
             <a href="week04/tablebuild.html">Tables</a>
             |
@@ -124,7 +127,10 @@
         <ul>
           <li>🇻🇪 Caracas, Venezuela:</li>
           <li>☔ 23°C - Sunshine</li>
-          <li>🚀 Page Visits: <span class="visits"></span></li>
+          <li>
+            🚀 Page Visits:
+            <span class="visits"></span>
+          </li>
         </ul>
       </section>
     </main>
