W04: Team Activity - Form

--- a/form.html
+++ b/form.html
@@ -9,8 +9,28 @@
     >
     <link rel="stylesheet" href="styles/base.css" >
     <link rel="stylesheet" href="styles/larger.css" >
-    <title>Form</title>
+    <title>Christopher - WDD 230 - Web Frontend Development - Form</title>
     <link rel="stylesheet" href="styles/form.css" >
+    <meta
+      name="description"
+      content="WDD 230 - Web Frontend Development, Christopher Gómez Dallar, Form"
+    >
+    <meta name="author" content="" >
+    <link rel="icon" href="favicon.ico" >
+    <link href="https://christopherdallar.github.io/wdd230/" rel="canonical" >
+    <meta
+      property="og:title"
+      content="Christopher - WDD 230 - Web Frontend Development - Form"
+    >
+    <meta property="og:type" content="website" >
+    <meta
+      property="og:url"
+      content="https://christopherdallar.github.io/wdd230/"
+    >
+    <meta
+      property="og:image"
+      content="https://christopherdallar.github.io/wdd230/images/form-page.png"
+    >
   </head>
   <body>
     <header>
