--- a/form.html
+++ b/form.html
@@ -120,6 +120,7 @@
       <p id="lastModified"></p>
     </footer>
 
+    <script src="scripts/getDates.js"></script>
     <script src="scripts/form.js"></script>
     <script src="scripts/index.js"></script>
   </body>
