W04: Team Activity - Form

--- a/form.html
+++ b/form.html
@@ -48,6 +48,7 @@
       <a href="form.html">Form</a>
     </nav>
     <main>
+      <h1>Form</h1>
       <form action="record.html" method="get">
         <div class="form-group">
           <label for="username">Username</label>
