W04 Project Milestone: The Chamber Join Page

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>Barquisimeto Chamber of Commerce</title>
+    <title>Barquisimeto Chamber of Commerce - Thank You</title>
     <link rel="icon" href="favicon.ico" >
     <meta name="author" content="Christopher Gomez Dallar wdd230" >
     <meta
@@ -14,16 +14,12 @@
     <meta property="og:type" content="website" >
     <meta
       property="og:title"
-      content="Christopher - WDD 230 - Web Frontend Development"
+      content="Christopher - WDD 230 - Web Frontend Development - Thankyou"
     >
     <meta property="og:type" content="website" >
     <meta
       property="og:url"
-      content="https://christopherdallar.github.io/wdd230/chamber/"
-    >
-    <meta
-      property="og:image"
-      content="https://christopherdallar.github.io/wdd230/chamber/images/home_page.png"
+      content="https://christopherdallar.github.io/wdd230/chamber/thankyou.html"
     >
     <link rel="stylesheet" href="styles/normalize.css" >
     <link rel="stylesheet" href="styles/base.css" >
@@ -42,6 +38,7 @@
     </header>
 
     <main>
+      <h1>Successful shipment, Thank you!</h1>
     </main>
 
     <footer>
