W04 Project Milestone: The Chamber Join Page

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>Barquisimeto Chamber of Commerce</title>
+    <title>Barquisimeto Chamber of Commerce - Join</title>
     <link rel="icon" href="favicon.ico" >
     <meta name="author" content="Christopher Gomez Dallar wdd230" >
     <meta
       name="description"
-      content="Barquisimeto Chamber of Commerce Site Plan is a website to promote business and share with as many people as possible news and recent events and a contact list of each member of the chamber of commerce."
+      content="Barquisimeto Chamber of Commerce Site Plan is a website to promote business and share with as many people as possible news and recent events and a contact list of each member of the chamber of commerce. Join Page"
     >
     <link href="https://christopherdallar.github.io/wdd230/" rel="canonical" >
     <meta property="og:type" content="website" >
     <meta
       property="og:title"
-      content="Christopher - WDD 230 - Web Frontend Development"
+      content="Christopher - WDD 230 - Web Frontend Development - Join"
     >
     <meta property="og:type" content="website" >
     <meta
