W04 Project Milestone: The Chamber Join Page

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -8,13 +8,13 @@
     <meta name="author" content="Christopher Gomez Dallar wdd230" >
     <meta
       name="description"
-      content="Barquisimeto Chamber of Commerce Site Plan is a website to promote business and share with as many people as possible news and recent events and a contact list of each member of the chamber of commerce. Join Page"
+      content="Barquisimeto Chamber of Commerce is a website to promote business and share with as many people as possible news and recent events and a contact list of each member of the chamber of commerce."
     >
     <link href="https://christopherdallar.github.io/wdd230/" rel="canonical" >
     <meta property="og:type" content="website" >
     <meta
       property="og:title"
-      content="Christopher - WDD 230 - Web Frontend Development - Join"
+      content="Barquisimeto Chamber of Commerce - Join"
     >
     <meta property="og:type" content="website" >
     <meta
