CSS Pseudo-elements

--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
             |
             <a href="week04/form-start/index.html">Form</a>
           </div>
-          <div>Week 05:</div>
+          <div>
+            Week 05:
+            <a href="https://codepen.io/christopherDallar/pen/dyEpJJe">PEN</a>
+          </div>
           <div>Week 06:</div>
         </div>
       </section>
