--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
           <div>
             Week 05:
             <a href="https://codepen.io/christopherDallar/pen/dyEpJJe">PEN</a>
+            |
+            <a href="week05/new-ward-members.json">JSON</a>
           </div>
           <div>Week 06:</div>
         </div>
