--- a/week05/prophets.html
+++ b/week05/prophets.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prophets</title>
-    <link rel="stylesheet" href="styles/prophets.css">
+    <link rel="stylesheet" href="styles/prophets.css" />
   </head>
   <body>
     <header>
@@ -14,7 +14,7 @@
       <div id="cards"></div>
     </main>
     <footer>
-      [Enter Your Name Here] | Latter-day Prophets
+      Christopher | Latter-day Prophets
     </footer>
 
     <script src="scripts/prophets.js"></script>
