--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
             <a href="https://codepen.io/christopherDallar/pen/dyEpJJe">PEN</a>
             |
             <a href="week05/new-ward-members.json">JSON</a>
+            |
+            <a href="week05/prophets.html">Prophets</a>
           </div>
           <div>Week 06:</div>
         </div>
