--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
             <a href="week05/new-ward-members.json">JSON</a>
             |
             <a href="week05/prophets.html">Prophets</a>
+            |
+            <a href="week05/weather.html">Weather</a>
           </div>
           <div>Week 06:</div>
         </div>
