--- a/index.html
+++ b/index.html
@@ -71,63 +71,7 @@
 
       <section class="card">
         <h2>Learning Activities</h2>
-        <div class="list-link">
-          <div>
-            Week 01:
-            <a href="#">Layout</a>
-            |
-            <a href="#">Media Query</a>
-            |
-            <a href="#">Js Pen</a>
-          </div>
-          <div>
-            Week 02:
-            <a href="week02/design.html">Web Design Principles</a>
-            |
-            <a
-              target="_blank"
-              href="https://codepen.io/christopherDallar/pen/vYwEjgy"
-            >
-              Ham Menu Pen
-            </a>
-            |
-            <a href="week02/bom.html">
-              DOM Manipulation
-            </a>
-          </div>
-          <div>
-            Week 03:
-            <a href="week03/images/landscape.webp">WebP</a>
-            |
-            <a href="week03/lazyload.html">lazyload</a>
-            |
-            <a href="week03/responsive-images.html">Responsive Images</a>
-            |
-            <a href="week03/bom.html">localStorage</a>
-          </div>
-          <div>
-            Week 04:
-            <a href="https://codepen.io/christopherDallar/pen/eYaZmVV">PEN</a>
-            |
-            <a href="week04/images/combinator-exercise.png">
-              Combinator Exercise
-            </a>
-            |
-            <a href="week04/tablebuild.html">Tables</a>
-            |
-            <a href="week04/form-start/index.html">Form</a>
-          </div>
-          <div>
-            Week 05:
-            <a href="https://codepen.io/christopherDallar/pen/dyEpJJe">PEN</a>
-            |
-            <a href="week05/new-ward-members.json">JSON</a>
-            |
-            <a href="week05/prophets.html">Prophets</a>
-            |
-            <a href="week05/weather.html">Weather</a>
-          </div>
-          <div>Week 06:</div>
+        <div class="list-link" id="weekLinks">
         </div>
       </section>
 
@@ -135,7 +79,10 @@
         <h2>Information</h2>
         <ul>
           <li>🇻🇪 Caracas, Venezuela:</li>
-          <li>☔ 23°C - Sunshine</li>
+          <li>
+            <img id="weather-icon" alt="weather icon" src="#" >
+            <span id="weather-info"></span>
+          </li>
           <li>
             🚀 Page Visits:
             <span class="visits"></span>
@@ -163,6 +110,7 @@
 
     <script src="scripts/getDates.js"></script>
     <script src="scripts/counterVisits.js"></script>
+    <script src="scripts/links.js"></script>
     <script src="scripts/index.js"></script>
   </body>
 </html>
