Chamber Project: Directory Page Examples

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Christopher Gomez Dallar wdd230" >
     <meta
       name="description"
-      content="Barquisimeto Chamber of Commerce Site Plan is a website to promote business and share with as many people as possible news and recent events and a contact list of each member of the chamber of commerce."
+      content="Barquisimeto Chamber of Commerce Directory Page website to promote a contact list of each member of the chamber of commerce."
     >
     <link href="https://christopherdallar.github.io/wdd230/" rel="canonical" >
     <meta property="og:type" content="website" >
@@ -25,6 +25,7 @@
       property="og:image"
       content="https://christopherdallar.github.io/wdd230/chamber/images/home_page.png"
     >
+    <meta property="og:type" content="website" >
     <link rel="stylesheet" href="styles/normalize.css" >
     <link rel="stylesheet" href="styles/base.css" >
     <link rel="stylesheet" href="styles/larger.css" >
